feedbacks: Fix the stepper to stretch to 100%

--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -10,3 +10,15 @@ h2 {
 .center {
 	text-align: center;
 }
+
+.mdl-step { 
+	height:100%; 
+}
+
+.mdl-step__content { 
+	overflow: inherit; 
+}
+
+.mdl-stepper--horizontal {
+	max-width: 100%;
+}
